<resources>
    <string name="app_name">IHM</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_placeholder">Search…</string>
    <string name="user_brice.email">brice.denice@gmail.com</string>
    <string name="user_brice.lastname">DeNice</string>
    <string name="user_brice.firstname">Brice</string>
    <string name="user_brice_fullname">DeNice Brice</string>
    <string name="card_search_title">Look for a drill</string>
    <string name="card_icone_description">image of a tool</string>
    <string name="card_mark">3.5</string>
    <string name="card_description">Lorem ipsum dolor sit amet, consectetus
        adipisicing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua.
    Lorem ipsum dolor sit amet, consectetus
        adipisicing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua.</string>


</resources>
