<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="15dip"
    android:background="@color/colorFifth"
    android:layout_height="wrap_content"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/cardImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/cardName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/card_icone_description"
                app:srcCompat="@drawable/ic_build_black_24dp" />

            <TextView
                android:id="@+id/cardName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_toEndOf="@+id/cardImage"
                android:layout_toRightOf="@+id/cardImage"
                android:text="@string/card_search_title" />
        </RelativeLayout>

        <TextView
            android:id="@+id/cardDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/card_description" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginBottom="10dp">


            <ImageView
                android:id="@+id/personImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                app:srcCompat="@drawable/ic_account_circle_black_24dp" />

            <TextView
                android:id="@+id/personName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/personImage"
                android:layout_alignTop="@+id/personImage"
                android:layout_toEndOf="@+id/personImage"
                android:layout_toRightOf="@+id/personImage"
                android:background="@drawable/rounded_corner_textview"
                android:ems="6"
                android:text="@string/user_brice_fullname" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/personName"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/personName"
                android:layout_marginEnd="55dp"
                android:layout_marginRight="55dp"
                android:text="@string/card_mark" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp"
                app:srcCompat="@drawable/ic_favorite_black_24dp" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
